--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,12 @@
+# http://localhost:8080/h2-console -> link para acesso ao banco H2 após iniciar o processo aqui
+# Arquivo para habilitar os perfils, nesse caso é o genérico, no entanto pode ser 
+# habilitado de testes, desenvolvimento para teste antes da produção e perfil de produção
+
+# Estamos dizendo que é o perfil de teste que está em uso
 spring.profiles.active=test
 
+# O warning que estava dando nós desabilitamos, para que quando chegar até a camada 3 (controladora) desabilite o JPA
+# para que todo controle de transação seja feito na camada 2 de serviço
+# Com essa chamada desabilitada e o uso da Annotation Transactional no Services, isso diz que as operações só serão feitas nas camadas 1 e 2
+# para ficar mais fácil a manutenção e mais eficiente.
 spring.jpa.open-in-view=false
